<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:facebook="http://schemas.android.com/tools"
    android:background="@color/login_bg">


    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/rl_avatar"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding_margin_15"
        android:fontFamily="@font/roboto_light"
        android:text="@string/login_login"
        android:textColor="@android:color/white"
        android:textSize="25sp" />

    <RelativeLayout
        android:id="@+id/rl_avatar"
        android:layout_width="138dp"
        android:layout_height="138dp"
        android:layout_marginBottom="23.3dp"
        android:layout_above="@id/rl_continue_acount"
        android:layout_centerHorizontal="true">
        <com.mikhaellopez.circularimageview.CircularImageView
            android:id="@+id/img_avater"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/avatar"
            app:civ_border_color="#ffd4b6"
            android:layout_centerHorizontal="true"
            app:civ_border_width="5dp"/>

        <com.facebook.login.widget.ProfilePictureView
            android:id="@+id/profilePic"
            android:layout_width="138dp"
            android:layout_height="138dp"
            facebook:preset_size="small"
            android:visibility="gone"
            />
    </RelativeLayout>



<!--    <TextView-->
<!--        android:id="@+id/tv_continue_as"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_above="@id/tv_continue_name"-->
<!--        android:gravity="center"-->
<!--        android:textSize="25sp"-->
<!--        android:text="Continue as "-->
<!--        android:textColor="@android:color/white"-->
<!--        android:layout_centerHorizontal="true"/>-->

<!--    <TextView-->
<!--        android:id="@+id/tv_continue_name"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_above="@id/spce_center_login"-->
<!--        android:gravity="center"-->
<!--        android:textSize="25sp"-->
<!--        android:text="Jhon Doe"-->
<!--        android:textStyle="bold"-->
<!--        android:textColor="@android:color/white"-->
<!--        android:layout_centerHorizontal="true"/>-->
<!--    <Space-->
<!--        android:id="@+id/spce_center_login"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="25dp"-->
<!--        android:layout_centerInParent="true"/>-->

<!--    <TextView-->
<!--        android:id="@+id/tv_continue_acount"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/padding_margin_20"-->
<!--        android:layout_marginLeft="30dp"-->
<!--        android:layout_marginRight="30dp"-->
<!--        android:paddingTop="5dp"-->
<!--        android:paddingLeft="5dp"-->
<!--        android:paddingBottom="5dp"-->
<!--        android:paddingRight="40dp"-->
<!--        android:drawableLeft="@drawable/switch_logo"-->
<!--        android:gravity="center"-->
<!--        android:textSize="13.8sp"-->
<!--        android:background="@drawable/bg_radius_white"-->
<!--        android:layout_above="@id/or"-->
<!--        android:text="@string/continue_as"-->
<!--        android:textColor="@color/text_fire"/>-->

    <RelativeLayout
        android:id="@+id/rl_continue_acount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/bg_radius_white"
        android:layout_above="@id/center_divider"
        android:layout_marginRight="30dp">
        <ImageView
            android:id="@+id/img_continue"
            android:layout_width="29.3dp"
            android:layout_height="29.3dp"
            android:src="@drawable/switch_logo"
            android:layout_margin="@dimen/padding_margin_7"/>
        <TextView
            android:id="@+id/tv_continue_acount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text_fire"
            android:fontFamily="@font/roboto"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:textSize="13.8sp"/>
    </RelativeLayout>
    <View
        android:id="@+id/center_divider"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_centerInParent="true"/>

    <TextView
        android:id="@+id/or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/center_divider"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="31.3dp"
        android:fontFamily="@font/roboto"
        android:text="@string/or"
        android:textColor="@android:color/white"
        android:textSize="13.8sp" />
    <TextView
        android:id="@+id/tv_swich_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17.3dp"
        android:text="@string/switch_account"
        android:textSize="25sp"
        android:fontFamily="@font/roboto_light"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/or"/>
    <RelativeLayout
        android:id="@+id/rl_google_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38.3dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/bg_radius_line"
        android:layout_below="@id/tv_swich_account"
        android:layout_marginRight="30dp">
        <ImageView
            android:id="@+id/img_google"
            android:layout_width="29.3dp"
            android:layout_height="29.3dp"
            android:src="@drawable/google_logo_fire"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="6.8dp"
            android:layout_marginBottom="6.5dp"/>
        <TextView
            android:id="@+id/tv_signup_google"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/img_google"
            android:layout_marginLeft="24.3dp"
            android:textSize="13.8sp"
            android:text="@string/signup_google"/>
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_facebook_sign"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/bg_radius_line"
        android:layout_below="@id/rl_google_sign"
        android:layout_marginRight="30dp">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/login_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone" />
        <ImageView
            android:id="@+id/img_facebook"
            android:layout_width="29.3dp"
            android:layout_height="29.3dp"
            android:src="@drawable/facebook_logo_login"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="6.8dp"
            android:layout_marginBottom="6.5dp"/>
        <TextView
            android:id="@+id/tv_signup_facebook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/img_facebook"
            android:layout_marginLeft="24.3dp"
            android:fontFamily="@font/roboto"
            android:textSize="13.8sp"
            android:text="@string/signup_facebook"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_without_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/bg_radius_line"
        android:layout_below="@id/rl_facebook_sign"
        android:layout_marginRight="30dp">
        <ImageView
            android:id="@+id/img_without"
            android:layout_width="29.3dp"
            android:layout_height="29.3dp"
            android:src="@drawable/without_logo_login"
            android:layout_marginLeft="9dp"
            android:layout_marginTop="6.8dp"
            android:layout_marginBottom="6.5dp"/>
        <TextView
            android:id="@+id/tv_signup_resigteration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:fontFamily="@font/roboto"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/img_without"
            android:layout_marginLeft="24.3dp"
            android:textSize="13.8sp"
            android:text="@string/signup_without_registration"/>
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/fl_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</RelativeLayout>