<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SettingFragment"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/padding_margin_10"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/padding_margin_30"
                android:background="@drawable/roundbg_directory"
                android:layout_alignTop="@id/fl_directory_content"/>
            <FrameLayout
                android:id="@+id/fl_directory_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/transfer">

            </FrameLayout>
            <TextView
                android:id="@+id/tv_setting_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28.3dp"
                android:layout_marginLeft="22.3dp"
                android:fontFamily="@font/roboto"
                android:text="@string/pref"
                android:textSize="12sp"
                android:textColor="@color/login_bg"/>
            <RelativeLayout
                android:id="@+id/rl_sec_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25.8dp"
                android:padding="10dp"
                android:layout_below="@id/tv_setting_account"
                android:layout_marginLeft="@dimen/padding_margin_30"
                android:layout_marginRight="@dimen/padding_margin_30"
                android:background="@drawable/radius_tv_blue_arrow"
                android:paddingTop="@dimen/padding_margin_5"
                android:paddingBottom="@dimen/padding_margin_5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_sec_country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/roboto"
                    android:textSize="13.8sp"
                    android:textColor="#1baec3"
                    android:text="@string/spinner_country"/>

                <ImageView
                    android:layout_width="9.5dp"
                    android:layout_height="5.5dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/padding_margin_8"
                    android:src="@drawable/down_arrow"
                    android:tint="@color/light_nav"/>
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/rl_sec_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="@dimen/padding_margin_20"
                android:layout_below="@id/rl_sec_country"
                android:layout_marginLeft="@dimen/padding_margin_30"
                android:layout_marginRight="@dimen/padding_margin_30"
                android:background="@drawable/radius_tv_blue_arrow"
                android:paddingTop="@dimen/padding_margin_5"
                android:paddingBottom="@dimen/padding_margin_5"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_sec_lanugage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:fontFamily="@font/roboto"
                    android:textSize="13.8sp"
                    android:textColor="#1baec3"
                    android:text="@string/spinner_language"/>

                <ImageView
                    android:layout_width="9.5dp"
                    android:layout_height="5.5dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/padding_margin_8"
                    android:src="@drawable/down_arrow"
                    android:tint="@color/light_nav"/>
            </RelativeLayout>

            <View
                android:id="@+id/divider_1"
                android:layout_width="match_parent"
                android:layout_below="@id/rl_sec_language"
                android:layout_marginTop="34.5dp"
                android:layout_marginLeft="21.8dp"
                android:layout_marginRight="21.8dp"
                android:background="@color/light_black"
                android:layout_height="0.5dp"/>

            <TextView
                android:id="@+id/tv_setting_general"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/divider_1"
                android:layout_marginTop="34.5dp"
                android:layout_marginLeft="21.8dp"
                android:textSize="12sp"
                android:fontFamily="@font/actor"
                android:text="@string/general"
                android:textColor="@color/login_bg"/>
            <RelativeLayout
                android:id="@+id/rl_dark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_setting_general"
                android:layout_marginTop="@dimen/padding_margin_20"
                android:layout_marginLeft="21.8dp"
                android:layout_marginRight="@dimen/padding_margin_10">

                <ImageView
                    android:id="@+id/icon_dark"
                    android:layout_width="21.8dp"
                    android:layout_height="21.8dp"
                    android:src="@drawable/ic_dark"/>
                <TextView
                    android:id="@+id/tv_dark_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/icon_dark"
                    android:layout_marginLeft="7.5dp"
                    android:textSize="13.8sp"
                    android:text="@string/darkmode"
                    android:fontFamily="@font/roboto"
                    android:gravity="center_vertical"
                    android:textColor="#797979"/>
            </RelativeLayout>
            <ToggleButton
                android:id="@+id/switch_dark_mode"
                android:layout_width="53.3dp"
                android:layout_height="22dp"
                android:layout_marginTop="@dimen/padding_margin_20"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/tv_setting_general"
                android:layout_marginLeft="@dimen/padding_margin_10"
                android:background="@drawable/togglebutton_setting"
                android:layout_marginRight="@dimen/padding_margin_10"
                android:textOff=""
                android:textOn=""
                android:layout_alignParentRight="true" />

            <RelativeLayout
                android:id="@+id/rl_noti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_dark"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="21.8dp">
                <ImageView
                    android:id="@+id/icon_noti"
                    android:layout_width="21.8dp"
                    android:layout_height="21.8dp"
                    android:src="@drawable/ic_noti"/>
                <TextView
                    android:id="@+id/tv_notification"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notification"
                    android:layout_toRightOf="@id/icon_noti"
                    android:layout_marginLeft="7.5dp"
                    android:textSize="13.8sp"
                    android:fontFamily="@font/actor"
                    android:gravity="center_vertical"
                    android:textColor="#797979"/>
            </RelativeLayout>

            <ToggleButton
                android:id="@+id/switch_notification"
                android:layout_width="53.3dp"
                android:layout_height="22dp"
                android:layout_marginTop="16.8dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/rl_dark"
                android:layout_marginLeft="@dimen/padding_margin_10"
                android:background="@drawable/togglebutton_setting"
                android:layout_marginRight="@dimen/padding_margin_10"
                android:textOff=""
                android:textOn=""
                android:layout_alignParentRight="true" />


            <RelativeLayout
                android:id="@+id/rl_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_noti"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="21.8dp">
                <ImageView
                    android:id="@+id/icon_local"
                    android:layout_width="21.8dp"
                    android:layout_height="21.8dp"
                    android:src="@drawable/ic_local"/>

                <TextView
                    android:id="@+id/tv_locatioin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Location"
                    android:layout_toRightOf="@id/icon_local"
                    android:layout_marginLeft="7.5dp"
                    android:fontFamily="@font/actor"
                    android:drawablePadding="10dp"
                    android:gravity="center_vertical"
                    android:textColor="#797979"/>
            </RelativeLayout>
            <ToggleButton
                android:id="@+id/switch_location"
                android:layout_width="53.3dp"
                android:layout_height="22dp"
                android:layout_marginTop="16.8dp"
                android:layout_alignParentEnd="true"
                android:layout_below="@id/rl_noti"
                android:layout_marginLeft="@dimen/padding_margin_10"
                android:background="@drawable/togglebutton_setting"
                android:layout_marginRight="@dimen/padding_margin_10"
                android:textOff=""
                android:textOn=""
                android:layout_alignParentRight="true" />

            <TextView
                android:id="@+id/tv_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/rl_location"
                android:layout_marginTop="47.3dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/radius_tv_blue"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingLeft="@dimen/padding_margin_30"
                android:paddingRight="@dimen/padding_margin_30"
                android:textColor="@color/light_nav"
                android:text="@string/btn_save"
                android:fontFamily="@font/actor"/>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>